View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026031 | Open CASCADE | OCCT:Visualization | public | 2015-04-08 16:22 | 2015-05-14 16:35 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0026031: Visualization - fix out-of-range within Select3D_InteriorSensitivePointSet::GetPoints() | ||||
Description | The viewer throws exception during displaying the shape. | ||||
Steps To Reproduce | pload VISUALIZATION XDE testreadiges pencil.igs p vinit View1 vclear vdefaults -autoTriang 0 vsetdispmode 1 vconnectto i 0 0 0 p tests/bugs/vis/bug26031 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug26031 | ||||
|
Branch CR26031 has been created by vpa. SHA-1: 76736b8dc65a43c2e05ecc7d593689e55f3fe40f Detailed log of new commits: Author: vpa Date: Wed Apr 8 19:02:45 2015 +0300 0026031: Visualization - fix out-of-range within Select3D_InteriorSensitivePointSet::GetPoints() Removed unnecessary point duplication at initialization of planar polygons in Select3D_InteriorSensitivePointSet; Test case for issue 0026031 |
|
Dear Kirill, the patch in branch CR26031 is ready to be reviewed. |
|
Branch CR26031 has been updated forcibly by vpa. SHA-1: fa4a0a37440232d9eb71fdc49a507f6a2060bd75 |
|
Please test the patch. |
|
Dear BugMaster, Branch CR26031 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: fa4a0a37440232d9eb71fdc49a507f6a2060bd75 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: bugs vis(004) bug26031: OK Testing on Linux: occt component : Total MEMORY difference: 94341523 / 94241945 [+0.11%] Total CPU difference: 54699.12999999931 / 56193.2199999997 [-2.66%] products component : Total MEMORY difference: 23728396 / 23720718 [+0.03%] Total CPU difference: 18570.59999999997 / 19069.279999999962 [-2.62%] Testing on Windows: occt component : Total MEMORY difference: 57131549 / 57127628 [+0.01%] Total CPU difference: 16040.069620299108 / 15976.577213298899 [+0.40%] products component : Total MEMORY difference: 15477989 / 15478724 [-0.00%] Total CPU difference: 6525.194227899981 / 6217.388654799964 [+4.95%] There are no differences in images found by testdiff. |
|
Branch CR26031 has been updated by mkv. SHA-1: 7379bc5832fbda7466d5bfc663bd5266ae31ed15 Detailed log of new commits: Author: mkv Date: Tue Apr 14 20:36:00 2015 +0300 Small correction of test case for issue CR26031 |
|
Branch CR26031 has been deleted by inv. SHA-1: 7379bc5832fbda7466d5bfc663bd5266ae31ed15 |
occt: master 7bb2b829 2015-04-16 08:19:05
Committer: bugmaster Details Diff |
0026031: Visualization - fix out-of-range within Select3D_InteriorSensitivePointSet::GetPoints() Removed unnecessary point duplication at initialization of planar polygons in Select3D_InteriorSensitivePointSet; Test case for issue 0026031 |
Affected Issues 0026031 |
|
mod - src/Select3D/Select3D_InteriorSensitivePointSet.cxx | Diff File | ||
add - tests/bugs/vis/bug26031 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-08 16:22 | kgv | New Issue | |
2015-04-08 16:22 | kgv | Assigned To | => kgv |
2015-04-08 16:22 | kgv | Assigned To | kgv => vpa |
2015-04-08 16:22 | kgv | Status | new => assigned |
2015-04-08 16:22 | kgv | Relationship added | child of 0024623 |
2015-04-08 19:02 | git | Note Added: 0039393 | |
2015-04-08 19:05 |
|
Note Added: 0039394 | |
2015-04-08 19:05 |
|
Assigned To | vpa => kgv |
2015-04-08 19:05 |
|
Status | assigned => resolved |
2015-04-08 19:05 |
|
Steps to Reproduce Updated | |
2015-04-08 19:27 | git | Note Added: 0039398 | |
2015-04-08 19:40 | kgv | Note Added: 0039399 | |
2015-04-08 19:40 | kgv | Assigned To | kgv => bugmaster |
2015-04-08 19:40 | kgv | Status | resolved => reviewed |
2015-04-09 15:39 |
|
Assigned To | bugmaster => mkv |
2015-04-14 20:36 |
|
Note Added: 0039725 | |
2015-04-14 20:36 | git | Note Added: 0039726 | |
2015-04-14 20:37 |
|
Test case number | => bugs vis(004) bug26031 |
2015-04-14 20:37 |
|
Assigned To | mkv => bugmaster |
2015-04-14 20:37 |
|
Status | reviewed => tested |
2015-04-17 15:40 | bugmaster | Changeset attached | => occt master 7bb2b829 |
2015-04-17 15:40 | bugmaster | Status | tested => verified |
2015-04-17 15:40 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:35 | git | Note Added: 0041074 |