0026031: Visualization - fix out-of-range within Select3D_InteriorSensitivePointSet::GetPoints()

Removed unnecessary point duplication at initialization of planar polygons in Select3D_InteriorSensitivePointSet;

Test case for issue #26031